[project]
authors = [
    {name = "Jani Sourander", email = "jani.sourander@kamk.fi"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "mkdocs-material~=9.5",
    "jinja2~=3.1",
    "requests~=2.31",
    "python-dotenv~=1.0",
]
name = "sourander-github-io"
version = "0.1.1"
description = "A portal or front page for all Github Pages sites under sourander.github.io"
readme = "README.md"

[project.scripts]
write-index = "sourander_github_io.main:write_index"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"